[workspace]
resolver = "3"
members = [
  "crates/actions",
  "crates/assets",
  "crates/db",
  "crates/editor",
  "crates/fs",
  "crates/http_client",
  "crates/icons",
  "crates/input",
  "crates/logger",
  "crates/metadata",
  "crates/multi_buffer",
  "crates/project",
  "crates/reqwest_client",
  "crates/session",
  "crates/settings",
  "crates/settings_macros",
  "crates/theme",
  "crates/ui",
  "crates/ui_macros",
  "crates/util",
  "crates/util_macros",
  "crates/workspace",
  "crates/worktree",
  "crates/zaku",
]

[workspace.package]
license = "AGPL-3.0-or-later"
authors = ["Mayank Verma <errmayank@gmail.com>"]
edition = "2024"
publish = false

[workspace.lints.clippy]
type_complexity = { level = "allow" }
too_many_arguments = { level = "allow" }
style = { level = "allow" }

[workspace.dependencies]
##################################################
# External crates
##################################################
anyhow = { version = "1.0" }
ashpd = { version = "0.13", default-features = false, features = [
  "async-io",
  "notification",
] }
async-lock = { version = "3.4" }
async-trait = { version = "0.1" }
bytes = { version = "1.11" }
chrono = { version = "0.4" }
dirs = { version = "6.0" }
dunce = { version = "1.0" }
futures = { version = "0.3" }
gpui = { git = "https://github.com/zed-industries/zed", rev = "ec9be5c332", package = "gpui" }
gpui_platform = { git = "https://github.com/zed-industries/zed", rev = "ec9be5c332", package = "gpui_platform" }
http = { version = "1.4" }
http-body = { version = "1.0" }
indexmap = { version = "2.14" }
indoc = { version = "2.0" }
itertools = { version = "0.14" }
is_executable = { version = "1.0" }
libc = { version = "0.2" }
libsqlite3-sys = { version = "0.37", features = ["bundled"] }
log = { version = "0.4" }
mimalloc = { version = "0.1" }
notify = { version = "8.2" }
palette = { version = "0.7", default-features = false, features = ["std"] }
parking_lot = { version = "0.12" }
pretty_assertions = { version = "1.4", features = ["unstable"] }
quote = { version = "1.0" }
rand = { version = "0.10" }
reqwest = { version = "0.13", default-features = false, features = [
  "charset",
  "http2",
  "multipart",
  "rustls",
  "socks",
  "stream",
  "system-proxy",
] }
rust-embed = { version = "8.11", features = ["debug-embed"] }
schemars = { version = "1.2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde_path_to_error = { version = "0.1" }
smallvec = { version = "1.15" }
smol = { version = "2.0" }
strum = { version = "0.28", features = ["derive"] }
sum_tree = { git = "https://github.com/zed-industries/zed", rev = "ec9be5c332", package = "sum_tree" }
syn = { version = "2.0", features = ["extra-traits", "full", "visit-mut"] }
tempfile = { version = "3.27" }
tendril = { version = "0.5" }
text = { git = "https://github.com/zed-industries/zed", rev = "ec9be5c332", package = "text" }
thread_local = { version = "1.1" }
tokio = { version = "1.52", features = ["rt", "rt-multi-thread", "sync"] }
toml = { version = "1.1" }
unicode-segmentation = { version = "1.13" }
url = { version = "2.5" }
uuid = { version = "1.23", features = ["v4"] }
windows = { version = "0.62", features = [
  "Win32_Foundation",
  "Win32_Storage_FileSystem",
] }
##################################################
# Workspace member crates
##################################################
actions = { path = "crates/actions" }
assets = { path = "crates/assets" }
db = { path = "crates/db" }
editor = { path = "crates/editor" }
fs = { path = "crates/fs" }
http_client = { path = "crates/http_client" }
icons = { path = "crates/icons" }
input = { path = "crates/input" }
logger = { path = "crates/logger" }
metadata = { path = "crates/metadata" }
multi_buffer = { path = "crates/multi_buffer" }
project = { path = "crates/project" }
reqwest_client = { path = "crates/reqwest_client" }
session = { path = "crates/session" }
settings = { path = "crates/settings" }
settings_macros = { path = "crates/settings_macros" }
theme = { path = "crates/theme" }
ui = { path = "crates/ui" }
ui_macros = { path = "crates/ui_macros" }
util = { path = "crates/util" }
util_macros = { path = "crates/util_macros" }
workspace = { path = "crates/workspace" }
worktree = { path = "crates/worktree" }
