[workspace]
resolver = "3"
members = [
  "crates/actions",
  "crates/assets",
  "crates/collections",
  "crates/command_palette",
  "crates/command_palette_hooks",
  "crates/db",
  "crates/editor",
  "crates/fs",
  "crates/git",
  "crates/grammars",
  "crates/http_client",
  "crates/input",
  "crates/language",
  "crates/language_core",
  "crates/languages",
  "crates/logger",
  "crates/metadata",
  "crates/multi_buffer",
  "crates/path",
  "crates/picker",
  "crates/platform_title_bar",
  "crates/project",
  "crates/project_panel",
  "crates/refineable",
  "crates/refineable_derive",
  "crates/request_buffer",
  "crates/request_editor",
  "crates/reqwest_client",
  "crates/response_panel",
  "crates/session",
  "crates/settings",
  "crates/settings_content",
  "crates/settings_macros",
  "crates/sql",
  "crates/sql_macros",
  "crates/svg",
  "crates/syntax_theme",
  "crates/system_specs",
  "crates/theme",
  "crates/theme_settings",
  "crates/title_bar",
  "crates/ui",
  "crates/ui_macros",
  "crates/util",
  "crates/util_macros",
  "crates/workspace",
  "crates/worktree",
  "crates/zaku",
]

[workspace.package]
version = "0.0.0"
license = "AGPL-3.0-or-later"
repository = "https://github.com/buildzaku/zaku"
edition = "2024"
rust-version = "1.95.0"
publish = false

[workspace.dependencies]
##################################################
# External crates
##################################################
anyhow = { version = "1.0" }
ashpd = { version = "0.13", default-features = false, features = [
  "async-io",
  "notification",
] }
async-lock = { version = "3.4" }
async-trait = { version = "0.1" }
bytes = { version = "1.11" }
clock = { git = "https://github.com/zed-industries/zed", rev = "7eb4cb2bfa", package = "clock" }
cookie = { version = "0.18" }
derive_more = { version = "2.1", features = ["deref", "deref_mut"] }
dirs = { version = "6.0" }
dunce = { version = "1.0" }
futures = { version = "0.3" }
fuzzy_nucleo = { git = "https://github.com/zed-industries/zed", rev = "7eb4cb2bfa", package = "fuzzy_nucleo" }
gpui = { git = "https://github.com/zed-industries/zed", rev = "7eb4cb2bfa", package = "gpui" }
gpui_platform = { git = "https://github.com/zed-industries/zed", rev = "7eb4cb2bfa", package = "gpui_platform" }
gpui_util = { git = "https://github.com/zed-industries/zed", rev = "7eb4cb2bfa", package = "gpui_util" }
hex = { version = "0.4" }
http = { version = "1.4" }
http-body = { version = "1.0" }
ignore = { version = "0.4" }
imara-diff = { version = "0.2" }
indexmap = { version = "2.14", features = ["serde"] }
indoc = { version = "2.0" }
inventory = { version = "0.3" }
is_executable = { version = "1.0" }
itertools = { version = "0.14" }
jiff = { version = "0.2" }
jsonc-parser = { version = "0.32", features = [
  "cst",
  "error_unicode_width",
  "serde",
] }
libc = { version = "0.2" }
libsqlite3-sys = { version = "0.38", features = ["bundled"] }
log = { version = "0.4" }
mimalloc = { version = "0.1" }
notify = { version = "8.2" }
num-traits = { version = "0.2" }
palette = { version = "0.7", default-features = false, features = ["std"] }
parking_lot = { version = "0.12" }
pretty_assertions = { version = "1.4", features = ["unstable"] }
proc-macro2 = { version = "1.0" }
quote = { version = "1.0" }
rand = { version = "0.10" }
regex = { version = "1.12" }
reqwest = { version = "0.13", default-features = false, features = [
  "charset",
  "http2",
  "multipart",
  "rustls",
  "socks",
  "stream",
  "system-proxy",
] }
rust-embed = { version = "8.11", features = ["debug-embed", "include-exclude"] }
rustc-hash = { version = "2.1" }
schemars = { version = "1.2" }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0" }
serde_path_to_error = { version = "0.1" }
sha2 = { version = "0.11" }
smallvec = { version = "1.15" }
smol = { version = "2.0" }
sqlformat = { version = "0.5" }
streaming-iterator = { version = "0.1" }
strum = { version = "0.28", features = ["derive"] }
sum_tree = { git = "https://github.com/zed-industries/zed", rev = "7eb4cb2bfa", package = "sum_tree" }
syn = { version = "2.0", features = ["extra-traits", "full", "visit-mut"] }
sysinfo = { version = "0.39" }
tempfile = { version = "3.27" }
tendril = { version = "0.5" }
text = { git = "https://github.com/zed-industries/zed", rev = "7eb4cb2bfa", package = "text" }
thread_local = { version = "1.1" }
tokio = { version = "1.52", features = ["rt", "rt-multi-thread", "sync"] }
toml = { version = "1.1" }
toml_edit = { version = "0.25", features = ["serde"] }
trash = { version = "5.2" }
tree-sitter = { version = "0.26" }
tree-sitter-html = { version = "0.23" }
tree-sitter-json = { version = "0.24" }
tree-sitter-xml = { version = "0.7" }
unicode-segmentation = { version = "1.13" }
url = { version = "2.5" }
uuid = { version = "1.23", features = ["v4"] }
which = { version = "8.0" }
windows = { version = "0.62", features = [
  "Wdk_System_SystemServices",
  "Win32_Foundation",
  "Win32_Storage_FileSystem",
  "Win32_System_SystemInformation",
] }
##################################################
# Workspace member crates
##################################################
actions = { path = "crates/actions" }
assets = { path = "crates/assets" }
collections = { path = "crates/collections" }
command_palette = { path = "crates/command_palette" }
command_palette_hooks = { path = "crates/command_palette_hooks" }
db = { path = "crates/db" }
editor = { path = "crates/editor" }
fs = { path = "crates/fs" }
git = { path = "crates/git" }
grammars = { path = "crates/grammars" }
http_client = { path = "crates/http_client" }
input = { path = "crates/input" }
language = { path = "crates/language" }
language_core = { path = "crates/language_core" }
languages = { path = "crates/languages" }
logger = { path = "crates/logger" }
metadata = { path = "crates/metadata" }
multi_buffer = { path = "crates/multi_buffer" }
path = { path = "crates/path" }
picker = { path = "crates/picker" }
platform_title_bar = { path = "crates/platform_title_bar" }
project = { path = "crates/project" }
project_panel = { path = "crates/project_panel" }
refineable = { path = "crates/refineable" }
refineable_derive = { path = "crates/refineable_derive" }
request_buffer = { path = "crates/request_buffer" }
request_editor = { path = "crates/request_editor" }
reqwest_client = { path = "crates/reqwest_client" }
response_panel = { path = "crates/response_panel" }
session = { path = "crates/session" }
settings = { path = "crates/settings" }
settings_content = { path = "crates/settings_content" }
settings_macros = { path = "crates/settings_macros" }
sql = { path = "crates/sql" }
sql_macros = { path = "crates/sql_macros" }
svg = { path = "crates/svg" }
syntax_theme = { path = "crates/syntax_theme" }
system_specs = { path = "crates/system_specs" }
theme = { path = "crates/theme" }
theme_settings = { path = "crates/theme_settings" }
title_bar = { path = "crates/title_bar" }
ui = { path = "crates/ui" }
ui_macros = { path = "crates/ui_macros" }
util = { path = "crates/util" }
util_macros = { path = "crates/util_macros" }
workspace = { path = "crates/workspace" }
worktree = { path = "crates/worktree" }

[patch.crates-io]
async-process = { git = "https://github.com/zed-industries/async-process", rev = "0b6d671357" }
async-task = { git = "https://github.com/smol-rs/async-task", rev = "b4486cd71e" }

[workspace.lints.rust]
# Visibility.
unreachable_pub = "warn"

[workspace.lints.rustdoc]
# Docs.
bare_urls = "warn"
broken_intra_doc_links = "warn"

[workspace.lints.clippy]
# Suppressions.
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
ignore_without_reason = "warn"

# Docs.
doc_comment_double_space_linebreaks = "warn"
doc_link_with_quotes = "warn"

# Panics and placeholders.
get_unwrap = "warn"
index_refutable_slice = "warn"
indexing_slicing = "warn"
panic = "warn"
panic_in_result_fn = "warn"
string_slice = "warn"
todo = "warn"
unreachable = "warn"
unwrap_used = "warn"

# Discarded errors and futures.
assertions_on_result_states = "warn"
let_underscore_future = "warn"
let_underscore_must_use = "warn"
map_err_ignore = "warn"
unused_result_ok = "warn"

# Numeric conversions.
cast_lossless = "warn"
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
cast_precision_loss = "warn"
cast_ptr_alignment = "warn"
cast_sign_loss = "warn"
checked_conversions = "warn"
decimal_bitwise_operands = "warn"
float_cmp = "warn"
float_cmp_const = "warn"
invalid_upcast_comparisons = "warn"
large_digit_groups = "warn"
lossy_float_literal = "warn"

# Unsafe and FFI.
mem_forget = "warn"
multiple_unsafe_ops_per_block = "warn"
no_mangle_with_rust_abi = "warn"
ptr_cast_constness = "warn"
ptr_offset_by_literal = "warn"
ref_as_ptr = "warn"
ref_binding_to_reference = "warn"
transmute_ptr_to_ptr = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"

# Cargo metadata.
cargo_common_metadata = "warn"
negative_feature_names = "warn"
redundant_feature_names = "warn"
wildcard_dependencies = "warn"

# Debug.
dbg_macro = "warn"
debug_assert_with_mut_call = "warn"
missing_fields_in_debug = "warn"

# API.
empty_enums = "warn"
fn_params_excessive_bools = "warn"
implicit_hasher = "warn"
inconsistent_struct_constructor = "warn"
into_iter_without_iter = "warn"
iter_not_returning_iterator = "warn"
iter_without_into_iter = "warn"
option_option = "warn"
pub_underscore_fields = "warn"
ref_option = "warn"
ref_option_ref = "warn"
self_only_used_in_recursion = "warn"
too_many_arguments = "allow"
type_complexity = "allow"
unnecessary_box_returns = "warn"
unused_async = "warn"

# Ownership.
assigning_clones = "warn"
cloned_instead_of_copied = "warn"
expl_impl_clone_on_copy = "warn"
implicit_clone = "warn"
infallible_try_from = "warn"
large_types_passed_by_value = "warn"
mut_mut = "warn"
needless_pass_by_value = "warn"
option_as_ref_cloned = "warn"

# Iterators and collections.
copy_iterator = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
from_iter_instead_of_collect = "warn"
iter_filter_is_ok = "warn"
iter_filter_is_some = "warn"
linkedlist = "warn"
stable_sort_primitive = "warn"
zero_sized_map_values = "warn"

# Async and concurrency.
await_holding_lock = "warn"
await_holding_refcell_ref = "warn"
large_futures = "warn"
rc_mutex = "warn"

# String formatting.
case_sensitive_file_extension_comparisons = "warn"
format_collect = "warn"
format_push_string = "warn"
inefficient_to_string = "warn"
single_char_pattern = "warn"
str_split_at_newline = "warn"
string_add_assign = "warn"
unicode_not_nfc = "warn"

# Expression.
bool_to_int_with_if = "warn"
borrow_as_ptr = "warn"
collapsible_else_if = "warn"
comparison_chain = "warn"
default_trait_access = "warn"
duration_suboptimal_units = "warn"
elidable_lifetime_names = "warn"
enum_glob_use = "warn"
explicit_deref_methods = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
if_not_else = "warn"
ignored_unit_patterns = "warn"
inline_always = "warn"
ip_constant = "warn"
items_after_statements = "warn"
manual_assert = "warn"
manual_ilog2 = "warn"
manual_instant_elapsed = "warn"
manual_is_power_of_two = "warn"
manual_is_variant_and = "warn"
manual_let_else = "warn"
manual_midpoint = "warn"
manual_string_new = "warn"
map_unwrap_or = "warn"
match_bool = "warn"
match_same_arms = "warn"
match_wild_err_arm = "warn"
match_wildcard_for_single_variants = "warn"
maybe_infinite_iter = "warn"
naive_bytecount = "warn"
needless_bitwise_bool = "warn"
needless_continue = "warn"
needless_for_each = "warn"
needless_raw_string_hashes = "warn"
ptr_as_ptr = "warn"
range_minus_one = "warn"
range_plus_one = "warn"
redundant_else = "warn"
same_functions_in_if_condition = "warn"
same_length_and_capacity = "warn"
semicolon_if_nothing_returned = "warn"
single_match_else = "warn"
uninlined_format_args = "warn"
unnecessary_debug_formatting = "warn"
unnecessary_join = "warn"
unnecessary_literal_bound = "warn"
unnecessary_semicolon = "warn"
unnecessary_trailing_comma = "warn"
unnecessary_wraps = "warn"
unnested_or_patterns = "warn"
verbose_bit_mask = "warn"

# Runtime safety.
large_stack_arrays = "warn"
unchecked_time_subtraction = "warn"

# Standard library.
non_std_lazy_statics = "warn"

# Tests.
should_panic_without_expect = "warn"

# Imports and naming.
macro_use_imports = "warn"
many_single_char_names = "warn"
mismatching_type_param_order = "warn"
no_effect_underscore_binding = "warn"
used_underscore_binding = "warn"
used_underscore_items = "warn"
