[package]
name = "zaku"
version = "0.4.0"
description = "Fast, open-source API client with fangs"
license = "MIT"
authors = ["Mayank Verma <errmayank@gmail.com>"]
repository = "https://github.com/buildzaku/zaku"
homepage = "https://zaku.app"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
dirs = { version = "6.0.0" }
indexmap = { version = "2.9.0", features = ["serde"] }
once_cell = { version = "1.21.3" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140" }
sha2 = { version = "0.10.8" }
specta = { version = "=2.0.0-rc.22" }
specta-typescript = { version = "0.0.9" }
tauri = { version = "2.5.1", features = ["devtools"] }
tauri-plugin-dialog = { version = "2.2.1" }
tauri-plugin-global-shortcut = { version = "2.2.0" }
tauri-plugin-http = { version = "2.4.3" }
tauri-plugin-notification = { version = "2.2.2" }
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
toml = { version = "0.8.20", features = ["preserve_order"] }

[target.'cfg(target_os = "linux")'.dependencies]
wgpu = { version = "25.0.0", default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = { version = "0.26.0" }
objc = { version = "0.2.7" }
rand = { version = "0.9.1" }
