[package]
name = "actions"
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[lib]
name = "actions"
path = "src/actions.rs"

[dependencies]
gpui = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
util = { workspace = true }
