[package]
name = "actions"
license.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "actions"
path = "src/actions.rs"

[lints]
workspace = true

[dependencies]
gpui = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
util = { workspace = true }
