[package]
name = "actions"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[lib]
name = "actions"
path = "src/actions.rs"

[lints]
workspace = true

[dependencies]
gpui = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
util = { workspace = true }
