[package]
name = "assets"
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "assets"
path = "src/assets.rs"

[dependencies]
anyhow = { workspace = true }
gpui = { workspace = true }
rust-embed = { workspace = true }
