[package]
name = "assets"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[lib]
name = "assets"
path = "src/assets.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
gpui = { workspace = true }
rust-embed = { workspace = true }
