[package]
name = "auto_update"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[lib]
name = "auto_update"
path = "src/auto_update.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
db = { workspace = true }
futures = { workspace = true }
gpui = { workspace = true }
http_client = { workspace = true }
log = { workspace = true }
metadata = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
settings = { workspace = true }
smol = { workspace = true }
tempfile = { workspace = true }
util = { workspace = true }
which = { workspace = true }

[dev-dependencies]
db = { workspace = true, features = ["test"] }
gpui = { workspace = true, features = ["test-support"] }
http_client = { workspace = true, features = ["test"] }
parking_lot = { workspace = true }
