[package]
name = "collections"
license.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[lib]
name = "collections"
path = "src/collections.rs"

[features]
test = []

[dependencies]
gpui_util = { workspace = true }
indexmap = { workspace = true }
rustc-hash = { workspace = true }
