[package]
name = "collections"
license.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "collections"
path = "src/collections.rs"

[lints]
workspace = true

[features]
test = []

[dependencies]
gpui_util = { workspace = true }
indexmap = { workspace = true }
rustc-hash = { workspace = true }
