[package]
name = "collections"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[lib]
name = "collections"
path = "src/collections.rs"

[lints]
workspace = true

[features]
test = []

[dependencies]
gpui_util = { workspace = true }
indexmap = { workspace = true }
rustc-hash = { workspace = true }
