[package]
name = "comet"
description = "Fast, open-source API client built for focus."
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
core-text = { workspace = true } # https://github.com/zed-industries/zed/issues/47168
gpui = { workspace = true }
