[package]
name = "comet"
description = "Fast, open-source API client built for focus."
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
assets = { workspace = true }
core-text = { workspace = true }
editor = { workspace = true }
gpui = { workspace = true }
workspace = { workspace = true }
