[package]
name = "command_palette"
license.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[lib]
name = "command_palette"
path = "src/command_palette.rs"

[features]
test-support = ["db/test-support"]

[dependencies]
actions = { workspace = true }
anyhow = { workspace = true }
command_palette_hooks = { workspace = true }
db = { workspace = true }
fuzzy_nucleo = { workspace = true }
gpui = { workspace = true }
jiff = { workspace = true }
log = { workspace = true }
picker = { workspace = true }
smol = { workspace = true }
ui = { workspace = true }
workspace = { workspace = true }

[dev-dependencies]
db = { workspace = true, features = ["test-support"] }
gpui = { workspace = true, features = ["test-support"] }
