[package]
name = "command_palette_hooks"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[lib]
name = "command_palette_hooks"
path = "src/command_palette_hooks.rs"

[lints]
workspace = true

[dependencies]
collections = { workspace = true }
derive_more = { workspace = true }
gpui = { workspace = true }
