[package]
name = "component"
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[lib]
name = "component"
path = "src/component.rs"
doctest = false

[dependencies]
gpui = { workspace = true }
inventory = { workspace = true }
parking_lot = { workspace = true }
strum = { workspace = true }
