[package]
name = "db"
license.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[features]
test-support = []

[lib]
name = "db"
path = "src/db.rs"

[dependencies]
anyhow = { workspace = true }
gpui = { workspace = true }
indoc = { workspace = true }
log = { workspace = true }
settings = { workspace = true }
smol = { workspace = true }
sql = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
fs = { workspace = true, features = ["test-support"] }
gpui = { workspace = true, features = ["test-support"] }
