[package]
name = "db"
license.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "db"
path = "src/db.rs"

[lints]
workspace = true

[features]
test = []

[dependencies]
anyhow = { workspace = true }
gpui = { workspace = true }
log = { workspace = true }
path = { workspace = true }
smol = { workspace = true }
sql = { workspace = true }
sql_macros = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
fs = { workspace = true, features = ["test"] }
gpui = { workspace = true, features = ["test-support"] }
