[package]
name = "editor"
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[lib]
name = "editor"
path = "src/editor.rs"

[dependencies]
gpui = { workspace = true }
input = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
text = { workspace = true }
theme = { workspace = true }
unicode-segmentation = { workspace = true }

[dev-dependencies]
gpui = { workspace = true, features = ["test-support"] }
pretty_assertions = { workspace = true }
settings = { workspace = true, features = ["test-support"] }
util = { workspace = true, features = ["test-support"] }
